@startuml
skinparam classAttributeIconSize 0
hide circle

Class ModuleBook {
    - modules: List<NusModule>
    + addModule(:NusModule)
    + getModule(:ModuleCode) : NusModule
    + gradeModule(:ModuleCode, :Grade)
    + addModuleTask(:ModuleTask)
}
Package NusModule {
    Class NusModule {
        - tasks: List<ModuleTask>
    }
    Class ModuleCode {
            {static} isValidModuleCode() : boolean
    }
    enum Grade <<enumeration>> {
        APLUS
        A
        AMINUS
        BPLUS
        B
        BMINUS
        CPLUS
        C
        DPLUS
        F
        S
        U
    }
    enum Priority <<enumeration>> {
        VERYHIGH
        HIGH
        MEDIAN
        LOW
        VERYLOW
    }
    Class Capulator {
        - modules: List<NusModule>
        + calculateCap() : double
    }

    Class ModuleTask {
        - timing: String
        - priority: Priority
        + getPriority() : Priority
        + getDate() : String
    }
}


ModuleBook "1" *-left-> "*" NusModule :manages >
NusModule *--> "0..1" Grade
NusModule "1" *--> "1" ModuleCode
NusModule "1" *--> "*" ModuleTask
ModuleTask *-- "1" Priority
Capulator o--> "*" NusModule
ModuleBook ..> Grade
ModuleBook ..> ModuleCode
ModuleBook ..> ModuleTask

@enduml
